--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -150,7 +150,7 @@
          <img src="../images/jupiter.jpg" alt="jupiter" id="jupiterthumb" onclick="PlanetsOff(); JupiterOn();">
          <img src="../images/saturn.jpg" alt="saturn" id="saturnthumb" onclick="PlanetsOff(); SaturnOn();">
          <img src="../images/uranus.jpg" alt="uranus" id="uranusthumb" onclick="PlanetsOff(); UranusOn();">
-         <img src="../images/neptune.jpg" alt="neptune" id="neptunethumb" onclick="PlanetsOff(); Neptune();">
+         <img src="../images/neptune.jpg" alt="neptune" id="neptunethumb" onclick="PlanetsOff(); NeptuneOn();">
      </div>
 
  </div>
