--- a/lab10/index.html
+++ b/lab10/index.html
@@ -15,6 +15,7 @@
         </style>
     </head> 
     <body>
+        <a href=" "
         <nav>
             <a href="index.html">Home |</a>
             <a href="skills.html">Skills |</a>
