--- a/project/project1.html
+++ b/project/project1.html
@@ -25,9 +25,9 @@
     </head> 
     <body>
         <header class="header">
-            <a href="home.html" class="logo">jareline <i>quiroz</i>.</a>
+            <a href="index.html" class="logo">jareline <i>quiroz</i>.</a>
             <nav>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
             </nav>
