--- a/project/contact.html
+++ b/project/contact.html
@@ -143,7 +143,7 @@
 
         <section class="contact"> 
             <div class="contact-content">
-                <h1>Contact</h1>
+                <h1><i>Contact</i></h1>
                 <h2>If you'd like to find out more about my design process or connect with me,
                     please fill out this brief form, and I'll be in touch shortly. Thank you!</h2>
             </div>
@@ -173,6 +173,8 @@
                     <textarea name="message" required></textarea>
                 </div> 
                 <button type="submit" >submit</button>
+
+                <form action="https://formspree.io/f/movgbpee" method="POST">
             </form> 
         </div>
 
