--- a/project/sketches.html
+++ b/project/sketches.html
@@ -63,6 +63,7 @@
             <div class="item"><img src="../project-images/squares.png"></div>
             <div class="item"><img src="../project-images/coloredsquares.png"></div>
             <div class="item"><img src="../project-images/other1.png"></div>
+            <div class="item"><img src="../project-images/detroitcar.png"></div>
             
     
         </div>
