--- a/project7/contact.html
+++ b/project7/contact.html
@@ -6,10 +6,14 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="icon" type="image/png" href="../project-images/favicon-96x96.png" alt="favicon image" sizes="96x96" />
+        
     <style>
         .contact {
             height: 25vh;
@@ -150,7 +154,7 @@
         </section>
 
         <div class="container">
-            <form>
+            <form action="https://formspree.io/f/movgbpee" method="POST">
                 <div class="form-row">
                     <div class="form-group">
                         <label for="firstname">First Name</label>
@@ -173,8 +177,6 @@
                     <textarea name="message" required></textarea>
                 </div> 
                 <button type="submit" >submit</button>
-
-                <form action="https://formspree.io/f/movgbpee" method="POST">
             </form> 
         </div>
 
@@ -190,6 +192,4 @@
         </footer>
 
     </body>
-
-
 </html>
