--- a/project7/index.html
+++ b/project7/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="icon" type="image/png" href="../project-images/favicon-96x96.png" sizes="96x96" />
 
@@ -18,6 +19,7 @@
     <body>
         <header class="header">
             <a href="index.html" class="logo">jareline <i>quiroz</i>.</a>
+
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
@@ -80,7 +82,7 @@
                     </a>
                 </div>
 
-                <div class="project-card span 2">
+                <div class="project-card span">
                     <a href="sketches.html">
                         <img src="../project-images/sketches-thumbnail.png" alt="Sketches & Renders">
                         <div class="overlay">
