--- a/project7/index.html
+++ b/project7/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Portfolio Website</title>
+        <title>Portfolio Website Home Page</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" type="image/png" href="../project-images/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="../project-images/favicon-96x96.png" alt="favicon image" sizes="96x96" />
 
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <style>
@@ -17,6 +17,7 @@
     
     </head> 
     <body>
+        <a href="#main-content" class="skip-link">Skip to main content</a>
         <header class="header">
             <a href="index.html" class="logo">jareline <i>quiroz</i>.</a>
 
@@ -27,7 +28,7 @@
             </nav>
         </header>
      
-        <main>  
+        <main id="main-content">  
         <section class="intro"> 
             <div class="intro-content">
                 <h1>hello! i'm jareline.</h1>
@@ -42,7 +43,7 @@
             <div class="projects-grid">
                 <div class="project-card span">
                     <a href="project1.html">
-                        <img src="../project-images/project1-thumbnail.png" alt="Project 1">
+                        <img src="../project-images/project1-thumbnail.png" alt="Wooden Sculpture with human-like proportions">
                         <div class="overlay">
                              <h3>Longing</h3>
                              <h4>Wooden Sculpture</h4>
@@ -52,7 +53,7 @@
 
                 <div class="project-card">
                     <a href="project2.html">
-                        <img src="../project-images/project2-thumbnail.png" alt="Project 2">
+                        <img src="../project-images/project2-thumbnail.png" alt="Foam carving reflecting Art Deco movement">
                         <div class="overlay">
                             <h3>Art Deco Artifact</h3>
                             <h4>Foam Carving </h4>
@@ -62,7 +63,7 @@
 
                 <div class="project-card large">
                     <a href="photography.html">
-                        <img src="../project-images/photography-thumbnail.png" alt="Photography">
+                        <img src="../project-images/photography-thumbnail.png" alt="Photograph of Williamsburg">
                         <div class="overlay">
                             <h3>Williamsburg at Night</h3>
                             <h4>Photo Essay</h4>
@@ -74,7 +75,7 @@
 
                 <div class="project-card">
                     <a href="project3.html">
-                        <img src="../project-images/project3-thumbnail.png" alt="Project 3">
+                        <img src="../project-images/project3-thumbnail.png" alt="Wooden mortar and pestle">
                         <div class="overlay">
                             <h3>Mortar & Pestle</h3>
                             <h4>Wooden Kitchen Hand Tool</h4>
@@ -84,7 +85,7 @@
 
                 <div class="project-card span">
                     <a href="sketches.html">
-                        <img src="../project-images/sketches-thumbnail.png" alt="Sketches & Renders">
+                        <img src="../project-images/sketches-thumbnail.png" alt="An upclose of an aquaform sketch">
                         <div class="overlay">
                             <h3>Sketches & Renders</h3>
                         </div>
