--- a/project7/photography.html
+++ b/project7/photography.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Photography</title>
+        <title>Williamsburg At Night</title>
         <link rel="stylesheet" href="styles.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     
         <style>
             .photography {
@@ -32,6 +36,7 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
+
 
         <main class="photography">
             <div class="item"><img src="../project-images/photo-1.png" alt="Photo of Williamsburg at night"></div>
