--- a/project7/project1.html
+++ b/project7/project1.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Portfolio Website</title>
+        <title>Longing</title>
         <link rel="stylesheet" href="styles.css">
-    
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   
         <style>
             .project1 {
                 margin: 20px;
@@ -48,9 +51,8 @@
             <div class="item"><img src="../project-images/project1-11.png" alt="A final shot of the finished sculpture"></div>
             <div class="item"><img src="../project-images/project1-12.png" alt="More shots of the final sculpture from different perspectives"></div>
         </main>
-    </body>
 
-    <footer>
+        <footer>
            <hr> 
             <div class="footer-container">
                 <p class="copyright">&copy; 2025 Jareline Quiroz</p>
@@ -60,5 +62,7 @@
                     </div>
             </div>         
         </footer>
+
+    </body>
 
 </html>
