--- a/project7/sketches.html
+++ b/project7/sketches.html
@@ -6,7 +6,6 @@
        <link rel="stylesheet" href="styles.css">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" type="image/png" href="../project-images/favicon-96x96.png" alt="favicon image" sizes="96x96" />
   
        <style>
            .gallery {
@@ -48,6 +47,7 @@
    </head>
    
    <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
        <header class="header">
            <a href="index.html" class="logo">jareline <i>quiroz</i>.</a>
            <nav>
@@ -57,7 +57,7 @@
            </nav>
        </header>
     
-       <main>
+       <main id="main-content">
        <div class="gallery">
            <div class="item"><img src="../project-images/sketches-thumbnail.png" alt="sketch of an aquaform shape"></div>
            <div class="item"><img src="../project-images/mirroredcurves.png" alt="sketch of mirrored curves across the y-axis"></div>
